--- a/hashell/hashell.cabal
+++ b/hashell/hashell.cabal
@@ -37,6 +37,7 @@ library
   build-depends:
       base >=4.7 && <5
     , isocline
+    , text
     , transformers
     , unix
   default-language: Haskell2010
@@ -52,6 +53,7 @@ executable hashell-exe
       base >=4.7 && <5
     , hashell
     , isocline
+    , text
     , transformers
     , unix
   default-language: Haskell2010
@@ -68,6 +70,7 @@ test-suite hashell-test
       base >=4.7 && <5
     , hashell
     , isocline
+    , text
     , transformers
     , unix
   default-language: Haskell2010
