Refactor TChan communication into separate file

--- a/hashell/hashell.cabal
+++ b/hashell/hashell.cabal
@@ -33,6 +33,7 @@ library
       ProcessToRun
       ProcState
       RunCommand
+      StmChannelCommunication
       UserMessages
   other-modules:
       Paths_hashell
