--- a/hashell/hashell.cabal
+++ b/hashell/hashell.cabal
@@ -5,23 +5,22 @@ cabal-version: 1.12
 -- see: https://github.com/sol/hpack
 
 name:           hashell
-version:        0.1.0.0
-description:    Please see the README on GitHub at <https://github.com/githubuser/hashell#readme>
-homepage:       https://github.com/githubuser/hashell#readme
-bug-reports:    https://github.com/githubuser/hashell/issues
-author:         Author name here
-maintainer:     example@example.com
-copyright:      2023 Author name here
+version:        1.0.0.0
+description:    Please see the README on GitHub at <https://github.com/bartacc/hashell#readme>
+homepage:       https://github.com/bartacc/hashell#readme
+bug-reports:    https://github.com/bartacc/hashell/issues
+author:         Bartosz Szczecinski
+maintainer:     bartosz.szczecinski@protonmail.com
+copyright:      2023 Bartosz Szczecinski
 license:        BSD3
 license-file:   LICENSE
 build-type:     Simple
 extra-source-files:
-    README.md
     CHANGELOG.md
 
 source-repository head
   type: git
-  location: https://github.com/githubuser/hashell
+  location: https://github.com/bartacc/hashell
 
 library
   exposed-modules:
@@ -39,7 +38,7 @@ library
       Paths_hashell
   hs-source-dirs:
       src
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fno-warn-name-shadowing
   build-depends:
       base >=4.7 && <5
     , containers
@@ -56,7 +55,7 @@ executable hashell-exe
       Paths_hashell
   hs-source-dirs:
       app
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
@@ -75,7 +74,7 @@ test-suite hashell-test
       Paths_hashell
   hs-source-dirs:
       test
-  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
+  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -fno-warn-name-shadowing -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
     , containers
