--- a/hashell/package.yaml
+++ b/hashell/package.yaml
@@ -1,13 +1,12 @@
 name:                hashell
-version:             0.1.0.0
-github:              "githubuser/hashell"
+version:             1.0.0.0
+github:              "bartacc/hashell"
 license:             BSD3
-author:              "Author name here"
-maintainer:          "example@example.com"
-copyright:           "2023 Author name here"
+author:              "Bartosz Szczecinski"
+maintainer:          "bartosz.szczecinski@protonmail.com"
+copyright:           "2023 Bartosz Szczecinski"
 
 extra-source-files:
-- README.md
 - CHANGELOG.md
 
 # Metadata used when publishing your package
@@ -17,7 +16,7 @@ extra-source-files:
 # To avoid duplicated efforts in documentation and dealing with the
 # complications of embedding Haddock markup inside cabal files, it is
 # common to point users to the README.md file.
-description:         Please see the README on GitHub at <https://github.com/githubuser/hashell#readme>
+description:         Please see the README on GitHub at <https://github.com/bartacc/hashell#readme>
 
 dependencies:
 - base >= 4.7 && < 5
@@ -38,6 +37,7 @@ ghc-options:
 - -Wmissing-home-modules
 - -Wpartial-fields
 - -Wredundant-constraints
+- -fno-warn-name-shadowing
 
 library:
   source-dirs: src
